# COP290

./: CMakeLists.txt  README.md  makefile  report.tex
.github/workflows/: cpp-linter.yml  cppcheck.yml  run_make.yml
src/: backend.c  backend.h  cell.h  frontend.c  frontend.h  functions.c  functions.h  main.c  parser.c  parser.h  structs.c  structs.h  testparser.c  utils.h  vec.c  vec.h
tests/: function_printer.c  function_printer.h  invalid_commands.txt  parserTest.c  parser_tester.c  sheetTester.c  sheetTester.h  tester.c  valid_commands.txt
